--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "portifolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://gabrielgui13.github.io",
+
   "dependencies": {
     "@fontsource/space-grotesk": "^4.5.10",
     "@react-three/fiber": "^8.10.0",
@@ -14,7 +16,6 @@
     "@types/react-dom": "^18.0.9",
     "@types/three": "^0.148.0",
     "aos": "^2.3.4",
-
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
@@ -26,7 +27,6 @@
     "swiper": "^8.4.5",
     "three": "^0.148.0",
     "tiny-slider": "^2.9.4",
-
     "typescript": "^4.9.3",
     "typewriter-effect": "^2.19.0",
     "web-vitals": "^2.1.4"
@@ -34,6 +34,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -57,6 +59,7 @@
   },
   "devDependencies": {
     "@types/aos": "^3.0.4",
-    "@types/styled-components": "^5.1.26"
+    "@types/styled-components": "^5.1.26",
+    "gh-pages": "^6.1.1"
   }
 }
